--- a/themes/wecodetheweb/source/_scss/_tags.scss
+++ b/themes/wecodetheweb/source/_scss/_tags.scss
@@ -8,8 +8,9 @@
   display: inline-block;
   font-family: $heading-font;
   margin: 0 1rem 0.5rem 0;
-  padding: 0 0.8rem;
+  padding: 0 1rem;
   line-height: 1.4;
+  border-radius: 3px;
 
   &:hover {
     background-color: lighten($color-blue, 5%);
