--- a/themes/wecodetheweb/layout/_partial/footer.ejs
+++ b/themes/wecodetheweb/layout/_partial/footer.ejs
@@ -3,14 +3,7 @@
     <a class="footer__link" href="http://nielsgerritsen.com">Niels Gerritsen</a>
   </footer>
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-63372789-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+  <script async src="//static.getclicky.com/101354173.js"></script>
+  <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101354173ns.gif" /></p></noscript>
 </body>
 </html>
